deps/v8/test/message/fail/let-lexical-name-in-array-prohibited.out
*%(basename)s:7: SyntaxError: let is disallowed as a lexically bound name
let [let];
     ^^^
SyntaxError: let is disallowed as a lexically bound name

